--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         <a href="admin.html">Admin</a>
         <a href="books.html">Books</a>
     </nav>
+
+    <main>
+        <h1>Welcome to Book Management App</h1>
+        <p>Please login to access the application.</p>
+        <script src="js/index.js"></script>
+    </main>
 </body>
 </html>
