--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>admin</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <nav>
@@ -15,8 +16,9 @@
     <main>
         <h1>Admin Management</h1>
         <div id="app"></div>
-        <script src="js/common.js"></script>
-        <script src="js/books.js"></script>
+       
     </main>
+    <script src="js/common.js"></script>
+    <script src="js/books.js"></script>
 </body>
 </html>
