--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <main>
         <h1>Welcome to Book Management App</h1>
         <p>Please login to access the application.</p>
+
+        <form id="loginForm">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required><br><br>
+           
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required><br><br>
+            <button type="submit">Login</button>
+            <p id="errorMessage"></p>
+           
+        </form>
         <script src="js/index.js"></script>
     </main>
 </body>
