--- a/admin.html
+++ b/admin.html
@@ -15,10 +15,25 @@
     
     <main>
         <h1>Admin Management</h1>
-        <div id="app"></div>
-       
+        <form id="addBookForm">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title" required><br><br>
+
+            <label for="autor">Autor:</label>
+            <input type="text" id="autor" name="autor" required><br><br>
+
+            <label for="category">Category:</label>
+            <select id="category" name="category">
+                <option value="Fiction">Fiction</option>
+                <option value="Comedy">Comedy</option>
+                <option value="Technical">Technical</option>
+                </select><br><br>
+                <button type="submit">Add Book</button>
+        </form>
+       <div id="app"></div>
+       <script src="js/common.js"></script>
+       <script src="js/books.js"></script>
     </main>
-    <script src="js/common.js"></script>
-    <script src="js/books.js"></script>
+   
 </body>
 </html>
