--- a/books.html
+++ b/books.html
@@ -13,5 +13,14 @@
         <a href="books.html">Books</a>
     </nav>
 
+    <main>
+        <h1>User Book Page</h1>
+        <button id="showAvailableButton">Show Available Books</button>
+        <button id="showBorrowedButton">Show Borrowed Books</button>
+        <div id="app"></div>
+        <script src="js/common.js"></script>
+        <script src="js/books.js"></script>
+    </main>
+
 </body>
 </html>
